# dtvault

./: .editorconfig  Cargo.toml  Procfile  README.md  go.mod  go.sum  gqlgen.yml  random.md  schema.graphqls
dtvault-bff/: gqlgen.yml  main.go
dtvault-bff/emitter/: emitter.go  encoder.go  passthru.go
dtvault-bff/graph/: schema.resolvers.go
dtvault-bff/graph/model/: program.go
dtvault-bff/grpcaddr/: address.go
dtvault-central/: Cargo.toml  sample_config.toml
dtvault-central/src/: config.rs  event.rs  main.rs  program.rs  serde.rs  video_storage.rs
dtvault-central/src/config/: condition.rs
dtvault-central/src/config/condition/: channel_type.rs  datetime_range.rs  int64_range.rs  literal_or_regex.rs
dtvault-central/src/event/: video_created.rs
dtvault-central/src/program/: model.rs  program_key.rs  program_store.rs  prost_convert.rs  validator.rs
dtvault-central/src/video_storage/: filesystem.rs  storage.rs  tempfile.rs  validator.rs
dtvault-collector-chinachu/: Cargo.toml
dtvault-collector-chinachu/src/: chinachu.rs  main.rs  record_with_raw.rs  recorded_program.rs
dtvault-collector-chinachu/src/chinachu/: model.rs  program_id.rs
dtvault-encoder-ffmpeg/: Cargo.toml  sample_config.toml
dtvault-encoder-ffmpeg/src/: config.rs  encoder.rs  main.rs
dtvault-types/: Cargo.toml  build.rs
dtvault-types/src/: lib.rs
dtvault-web/: codegen.yml  package.json
dtvault-web/public/: index.html  manifest.json
dtvault-web/src/: App.tsx  apolloClient.ts  index.tsx  setupProxy.js  utils.ts
dtvault-web/src/pages/: Dashboard.tsx  Program.graphql  Program.tsx  Programs.graphql  Programs.tsx
graph/: resolver.go  schema.resolvers.go
graph/model/: program.go
proto/: channel.proto  encoder_service.proto  persistence.proto  preset.proto  program.proto  program_service.proto  video.proto  video_storage_service.proto
proto/shibafu528/dtvault/: channel.proto  program.proto  video.proto
proto/shibafu528/dtvault/central/: persistence.proto  program_service.proto
proto/shibafu528/dtvault/encoder/: encoder_service.proto  preset.proto
proto/shibafu528/dtvault/storage/: video_storage_service.proto
