[package]
name = "dtvault-central"
version = "0.1.0"
authors = ["shibafu <shibafu528@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.3"
prost = "0.6"
prost-types = "0.6"
once_cell = "1.5"
tempfile = "3.1"
thiserror = "1.0"
envy = "0.4"
fs2 = "0.4"
mime = "0.3"
num-traits = "0.2"
num-derive = "0.3"
pin-project = "1"
serde_json = "1.0"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.tokio]
version = "0.2"
features = ["rt-threaded", "time", "stream", "fs", "macros"]

[dependencies.dtvault-types]
path = "../dtvault-types"

[dependencies.uuid]
version = "0.8"
features = ["v4"]
