[package]
name = "dtvault-central"
version = "0.1.0"
authors = ["shibafu <shibafu528@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.4"
prost = "0.7"
prost-types = "0.7"
once_cell = "1.5"
tempfile = "3.1"
thiserror = "1.0"
envy = "0.4"
fs2 = "0.4"
mime = "0.3"
num-traits = "0.2"
num-derive = "0.3"
pin-project = "1"
serde_json = "1.0"
toml = "0.5"
tokio-stream = "0.1"
regex = "1"
const_format = "0.2"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.tokio]
version = "1.0"
features = ["full"]

[dependencies.dtvault-types]
path = "../dtvault-types"

[dependencies.uuid]
version = "0.8"
features = ["v4"]

[dependencies.chrono]
version = "0.4"
features = ["serde"]