[package]
name = "dtvault-collector-chinachu"
version = "0.1.0"
authors = ["shibafu <shibafu528@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.3"
prost = "0.6"
prost-types = "0.6"
regex = "1"
once_cell = "1.5"
thiserror = "1.0"
clap = "2.33"
envy = "0.4"
indexmap = "1.6"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.serde_json]
version = "1.0"
features = ["raw_value", "preserve_order"]

[dependencies.tokio]
version = "0.2"
features = ["macros"]

[dependencies.dtvault-types]
path = "../dtvault-types"
