[package]
name = "dtvault-collector-chinachu"
version = "0.1.0"
authors = ["shibafu <shibafu528@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.4"
prost = "0.7"
prost-types = "0.7"
regex = "1"
once_cell = "1.5"
thiserror = "1.0"
clap = "2.33"
envy = "0.4"
indexmap = "1.6"
mime_guess = "2.0"
tokio-stream = "0.1"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.serde_json]
version = "1.0"
features = ["raw_value", "preserve_order"]

[dependencies.tokio]
version = "1"
features = ["rt-multi-thread", "macros"]

[dependencies.dtvault-types]
path = "../dtvault-types"
