[package]
name = "dtvault-encoder-ffmpeg"
version = "0.1.0"
authors = ["shibafu <shibafu528@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.3"
prost = "0.6"
prost-types = "0.6"
envy = "0.4"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.tokio]
version = "0.2"
features = ["rt-threaded", "time", "stream", "fs", "macros", "process"]

[dependencies.dtvault-types]
path = "../dtvault-types"