[package]
name = "dtvault-encoder-ffmpeg"
version = "0.1.0"
authors = ["shibafu <shibafu528@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.4"
prost = "0.7"
prost-types = "0.7"
envy = "0.4"
toml = "0.5"
shell-words = "1.0"
thiserror = "1.0"
tokio-stream = "0.1"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.dtvault-types]
path = "../dtvault-types"