[package]
name = "dtvault-types"
version = "0.1.0"
authors = ["shibafu <shibafu528@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.4.3"
prost = "0.7"
prost-types = "0.7"

[build-dependencies]
tonic-build = "0.4.2"
const_format = "0.2"